--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://unpkg.com/@blueprintjs/core@^1.11.0/dist/blueprint.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
+
     <title>Express Blog</title>
   </head>
   <body>
